# openscribit

./: .gitignore  README.md  main.py  pyproject.toml
docs/dev/: manual-calibration.md
tools/scribit-cmd/: pyproject.toml
tools/scribit-cmd/scribit_cmd/: cli.py  http_server.py
tools/scribit-plot/: README.md  main.py  pyproject.toml  scribit_svg_to_gcode.py
tools/scribit-plot/scribit_plot/: __init__.py  calibration_cli.py  calibration_pattern.py  calibration_profile.py  cli.py  config.py  gcode.py  geometry.py  path_optimizer.py  runtime_estimator.py  svg_loader.py
tools/scribit-plot/tests/: test_cli_chaining.py  test_color_mapping.py  test_path_optimizer.py
