[project]
name = "scribit-cmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1.0",
    "textual>=0.80.0",
    "typer>=0.25.1",
]

[project.scripts]
sbcmd = "scribit_cmd.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pyright]
reportUnusedParameter = "none"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
