[project]
name = "scribit-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "svgpathtools>=1.7.2",
    "scipy>=1.11",
]

[project.scripts]
sbplot = "scribit_plot.cli:main"
sbcal = "scribit_plot.calibration_cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

